--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <body>
        Liste des membres de la team DevOps :
 <ul>
-    <li>Milk</li>
+    <li><a href="laurent.html">Laurent Morin</a></li>
 </ul>
      </body>
 </html>
