--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
        Liste des membres de la team DevOps :
 <ul>
     <li><a href="laurent.html">Laurent Morin</a></li>
+    <li><a href="vincent.html">Vincent LIEGEARD</a></li>
 </ul>
      </body>
 </html>
