--- a/cyril.html
+++ b/cyril.html
@@ -1,1 +1,12 @@
-Hello!!! Vous etes bien sur la page de Cyril ;)
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Cyril HTML</title>
+	</head>
+	<body>
+
+	<h1> Hello, vous etes sur la page de Cyril ;) </h1>
+
+
+	</body>
+</html>
