--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
        Liste des membres de la team DevOps :
 <ul>
     <li><a href="laurent.html">Laurent Morin</a></li>
-    <li><a href="vincent.html">Vincent LIEGEARD</a></li>
-</ul>
-<ul>
-	<li>cyril.html</li>
+    <li><a href="vincent.html">Vincent LIEGEARD</a></li> 
+    <li><a href="cyril.html">Cyril Carlier</a></li>
 </ul>
      </body>
 </html>
