--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <ul>
     <li><a href="laurent.html">Laurent Morin</a></li>
     <li><a href="vincent.html">Vincent LIEGEARD</a></li>
-    <li><a href="stephane.html">Vincent LIEGEARD</a></li>
+    <li><a href="stephane.html">Stephane ADJEvi</a></li>
 </ul>
      </body>
 </html>
