--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <li><a href="cyril.html">Cyril Carlier</a></li>
     <li><a href="vincent.html">Vincent LIEGEARD</a></li>
     <li><a href="mika.html">Mickael LESPINASSE</a></li>
+    <li><a href="Mayline.html">Mayline Dangeard</a></li>
+
 </ul>
      </body>
 </html>
