commit de bouchra

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <li><a href="cyril.html">Cyril Carlier</a></li>
     <li><a href="vincent.html">Vincent LIEGEARD</a></li>
     <li><a href="mika.html">Mickael LESPINASSE</a></li>
+    <li><a href="bouchra.html">Bouchra EL KHAYAT</a></li>
 </ul>
      </body>
 </html>
