--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <li><a href="simon.html">Simon Falvard</a></li>
     <li><a href="mika.html">Mickael LESPINASSE</a></li>
     <li><a href="Mayline.html">Mayline Dangeard</a></li>
+    <li><a href="edouard.html">Edouard</a></li>
 
 </ul>
      </body>
