Mise à jour index.html par julien

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <li><a href="simon.html">Simon Falvard</a></li>
     <li><a href="mika.html">Mickael LESPINASSE</a></li>
     <li><a href="Mayline.html">Mayline Dangeard</a></li>
-
+    <li><a href="julien.html">Julien Smith</a></li>
 </ul>
      </body>
 </html>
