--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li><a href="Mayline.html">Mayline Dangeard</a></li>
     <li><a href="julien.html">Julien Smith</a></li>
     <li><a href="bruno.html">Bruno's page</a></li>
+    <li><a href="edouard.html">Edouard's page</a></li> 
 
 </ul>
      </body>
