--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <li><a href="julien.html">Julien Smith</a></li>
     <li><a href="bruno.html">Bruno's page</a></li>
     <li><a href="edouard.html">Edouard's page</a></li> 
-    <li><a href="bouchra.html">Bouchra El khayat</a></li>	
+    <li><a href="bouchra.html">Bouchra El khayat</a></li>
+<li>Adel </li>
 
 
 </ul>
