--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <li><a href="simon.html">Simon Falvard</a></li>
   <li><a href="stephane.html">Stephane ADJEvi</a></li>
   <li><a href="vincent.html">Vincent LIEGEARD</a></li>
+
+  <li><a href="archana.html">Archana RAMADOSS</a></li>
   <li>Adel </li>
 
 </ul>
